manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: test-deployment
  type: ClusterIP
