manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otusapp-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "http://arch.homework/$2"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /otusapp/(.*)/(.*)
        backend:
          service:
            name: test-service
            port:
              number: 80
